--- a/config.toml
+++ b/config.toml
@@ -11,29 +11,34 @@ enableEmoji = true
 
 [menu]
   [[menu.main]]
+    name = "Gitea"
+    url = "https://gitea.hozijui.com"
+    weight = 1
+
+  [[menu.main]]
     name = "Weekly Report"
     url = "/report/"
-    weight = 1
+    weight = 2
 
   [[menu.main]]
     name = "Blog"
     url = "/posts/"
-    weight = 2
+    weight = 3
 
   [[menu.main]]
     name = "Categories"
     url = "/categories/"
-    weight = 3
+    weight = 4
 
   [[menu.main]]
     name = "Tags"
     url = "/tags/"
-    weight = 4
+    weight = 5
 
   [[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 5 
+    weight = 6
 
 [params]
     since = 2017
